feat/ui: 添加游戏启动进度对话框并优化启动流程
- 新增 ProgressDialog 类用于显示游戏启动进度
- 在 GameLauncher 中集成进度对话框，分阶段显示启动过程
- 更新 pom.xml，添加 javafx-maven-plugin 插件
- 新增 run.bat 和 run.sh脚本用于运行项目
- 在 settings 中添加 navigationPosition 字段


Former-commit-id: a8d9d66cad4bbfe33d74f839e367ab4bfb6accaa